--- a/src/components/TopBlock/components/DownloadButton/DownloadButton.module.css
+++ b/src/components/TopBlock/components/DownloadButton/DownloadButton.module.css
@@ -14,7 +14,7 @@
     }
 
     &:hover {
-        @media (min-width: 744px) {
+        @media (hover: hover) and (pointer: fine) {
             & .before {
                 opacity: 0;
             }
