--- a/src/components/TopBlock/components/DownloadButton/DownloadButton.module.css
+++ b/src/components/TopBlock/components/DownloadButton/DownloadButton.module.css
@@ -1,16 +1,13 @@
 .root {
-    padding: 16px 24px 14px 54px;
+    padding: 12px 24px;
     border-radius: 36px;
     background: #08050D;
-    position: relative;
     box-shadow: 0 8px 18px 0 rgba(0, 0, 0, 0.25);
 
     @media (max-width: 743px) {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 12px 24px;
-        gap: 6px;
     }
 
     &:hover {
@@ -27,11 +24,16 @@
         }
     }
 }
+.textWrap {
+    position: relative;
+    width: max-content;
+    padding-left: 30px;
+}
 .before,
 .after {
     position: absolute;
     width: 24px;
-    top: 12px;
+    top: -4px;
     transition: opacity 0.2s;
 
     & img {
@@ -39,14 +41,10 @@
     }
 }
 .before {
-    left: 24px;
-
-    @media (max-width: 743px) {
-        position: static;
-    }
+    left: 0;
 }
 .after {
-    right: 24px;
+    right: 0;
     opacity: 0;
 }
 .text {
@@ -57,7 +55,4 @@
     transition: left 0.3s;
     position: relative;
 
-    @media (max-width: 743px) {
-        margin-top: 2px;
-    }
 }
